<resources>
    <!-- Global -->
    <string name="app_name">Math Explosion</string>

    <!-- MainActivity -->
    <string name="action_settings">About</string>
    <string name="start_button">Play Game</string>

    <!-- MainActivity & OptionsActivity -->
    <string name="options_button">Options</string>
    <string name="operator">Operators:</string>
    <string name="operator_addition">+</string>
    <string name="operator_subtraction">-</string>
    <string name="operator_multiplication">x</string>
    <string name="operator_division">÷</string>

    <!-- OptionsActivity -->
    <string name="all_operators">All Operators</string>
    <string name="difficulty">Difficulty:</string>
    <string-array name="difficulty_options">
        <item>I\'m too young to die</item>
        <item>Hey, not too rough</item>
        <item>Hurt me plenty</item>
        <item>Ultra-Violence</item>
        <item>NIGHTMARE!</item>
    </string-array>
    <string name="amount_of_operations">Operations:</string>
    <string name="operations_amount_single">Single</string>
    <string name="operations_amount_double">Double</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- GameActivity -->
    <string name="score">Score:</string>
    <string name="starting_score">0</string>
    <string name="lives">Lives:</string>
    <string name="starting_lives">3</string>

    <!-- GameOverActivity -->
    <string name="game_over">Game Over!</string>
    <string name="taunt">Better luck next time.</string>

    <!-- AboutActivity -->
    <string name="about">About Math Explosion</string>
    <string name="version_number">v1.0.0</string>
    <string name="author_name">Maxwell Haley</string>
    <string name="completion_date">November 7th, 2017</string>
    <string name="course_name">Programming V</string>
    <string name="course_number">420-B51</string>
    <string name="game_description">Solve math equations while beating the timer!</string>
</resources>
