<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.qc.cegep_heritage.mhaley_b51_mathexplosion.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/txtGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="57dp"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="42sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStart"
        style="@android:style/Widget.Material.Button"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginStart="@dimen/main_button_marginStart"
        android:layout_marginTop="57dp"
        android:text="@string/start_button"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGameName" />

    <Button
        android:id="@+id/btnOptions"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:text="@string/options_button"
        android:layout_marginTop="57dp"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        android:layout_marginStart="@dimen/main_button_marginStart"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtPlusSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_addition"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="@dimen/main_operand_size"
        android:layout_marginStart="@dimen/main_operand_marginStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/main_operand_marginTop" />

    <TextView
        android:id="@+id/txtMinusSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_subtraction"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="@dimen/main_operand_size"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/main_operand_marginTop"
        app:layout_constraintLeft_toRightOf="@+id/txtPlusSign"
        android:layout_marginStart="@dimen/main_operand_marginStart" />

    <TextView
        android:id="@+id/txtMultiSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_multiplication"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="@dimen/main_operand_size"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/main_operand_marginTop"
        app:layout_constraintLeft_toRightOf="@+id/txtMinusSign"
        android:layout_marginStart="@dimen/main_operand_marginStart" />

    <TextView
        android:id="@+id/txtDiviSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_division"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="@dimen/main_operand_size"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/main_operand_marginTop"
        app:layout_constraintLeft_toRightOf="@+id/txtMultiSign"
        android:layout_marginStart="@dimen/main_operand_marginStart" />

</android.support.constraint.ConstraintLayout>
