<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.qc.cegep_heritage.mhaley_b51_mathexplosion.AboutActivity">

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/about_text_marginTop"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Material.Display3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtVersionNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="@dimen/about_text_marginTop"
        android:text="@string/version_number"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="@dimen/about_text_marginTop"
        android:text="@string/author_name"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVersionNo" />

    <TextView
        android:id="@+id/txtCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="@dimen/about_text_marginTop"
        android:text="@string/completion_date"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAuthor" />

    <TextView
        android:id="@+id/txtCourseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/about_text_marginTop"
        android:text="@string/course_name"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCompleted" />

    <TextView
        android:id="@+id/txtCourseNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="@dimen/about_text_marginTop"
        android:text="@string/course_number"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/txtCourseName"
        app:layout_constraintTop_toBottomOf="@+id/txtCompleted" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:text="@string/game_description"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCompleted" />

    <TextView
        android:id="@+id/txtCurrentDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="132dp"
        android:text="YYYY/MM/DD - HH:MM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

</android.support.constraint.ConstraintLayout>
