<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.qc.cegep_heritage.mhaley_b51_mathexplosion.GameActivity">

    <TextView
        android:id="@+id/txtEquation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="88dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtxtUserAnswer"
        android:layout_width="226dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEquation" />

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="Answer"
        app:layout_constraintStart_toEndOf="@+id/edtxtUserAnswer"
        app:layout_constraintTop_toBottomOf="@+id/txtEquation" />

    <TextView
        android:id="@+id/txtScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/starting_score"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toEndOf="@+id/txtScoreLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLivesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="8dp"
        android:text="@string/lives"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toEndOf="@+id/txtScore"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/starting_lives"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintStart_toEndOf="@+id/txtLivesLabel"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
